force-app/main/default/objects/RecurringEmail__c/RecurringEmail__c.object-meta.xml
<CustomObject>
    <label>Recurring Email</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>