force-app/main/default/objects/RecurringEmail__c/fields/FromAddressOverride__c.field-meta.xml
<CustomField>
    <fullName>FromAddressOverride__c</fullName>
    <inlineHelpText>Entering an address here will override the default contact owner email address.</inlineHelpText>
    <label>From Address Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>