force-app/main/default/objects/RecurringEmail__c/fields/FromNameOverride__c.field-meta.xml
<CustomField>
    <fullName>FromNameOverride__c</fullName>
    <inlineHelpText>Entering a name here will override the default contact owner name.</inlineHelpText>
    <label>From Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>