force-app/main/default/objects/RecurringEmail__c/fields/LastSendDate__c.field-meta.xml
<CustomField>
    <fullName>LastSendDate__c</fullName>
    <label>Last Send Date</label>
    <type>DateTime</type>
</CustomField>