force-app/main/default/objects/RecurringEmail__c/fields/NextSendDate__c.field-meta.xml
<CustomField>
    <fullName>NextSendDate__c</fullName>
    <inlineHelpText>Date will be updated with a slight delay.</inlineHelpText>
    <label>Next Send Date</label>
    <type>DateTime</type>
</CustomField>