force-app/main/default/objects/RecurringEmail__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select a Quicktext. This will be used for the email body.</inlineHelpText>
    <label>Quicktext</label>
    <referenceTo>Snippet__c</referenceTo>
    <relationshipLabel>Recurring Emails</relationshipLabel>
    <relationshipName>RecurringEmails</relationshipName>
    <type>Lookup</type>
</CustomField>