force-app/main/default/objects/RecurringEmail__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>Please enter a start date. Alternatively, you can select a date field from the contact record. (See &quot;Start Date Field&quot;.)</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>