force-app/main/default/objects/RecurringEmail__c/fields/StartDateFieldName__c.field-meta.xml
<CustomField>
    <fullName>StartDateFieldName__c</fullName>
    <inlineHelpText>Please select a date field from the contact record. Alternatively, you can enter a custom start date. (See &quot;Start Date&quot;.)</inlineHelpText>
    <label>Start Date Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birthdate</fullName>
            </value>
            <value>
                <fullName>LastActive__c</fullName>
                <label>Last Active</label>
            </value>
            <value>
                <fullName>CreatedDate</fullName>
                <label>Created Date</label>
            </value>
            <value>
                <fullName>LastViewedDate</fullName>
                <label>Last Viewed Date</label>
            </value>
            <value>
                <fullName>LastActivityDate</fullName>
                <label>Last Activity Date</label>
            </value>
            <value>
                <fullName>LastModifiedDate</fullName>
                <label>Last Modified Date</label>
            </value>
            <value>
                <fullName>LastReferencedDate</fullName>
                <label>Last Referenced Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>