force-app/main/default/objects/RecurringEmail__c/fields/SubjectOverride__c.field-meta.xml
<CustomField>
    <fullName>SubjectOverride__c</fullName>
    <inlineHelpText>Entering a subject here will override the default subject from the selected Quicktext or Template.</inlineHelpText>
    <label>Subject Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>