force-app/main/default/objects/RecurringEmail__c/fields/SystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>SystemExternalId__c</fullName>
    <externalId>true</externalId>
    <label>System External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>