force-app/main/default/objects/RecurringEmail__c/fields/TimeOnSendDay__c.field-meta.xml
<CustomField>
    <fullName>TimeOnSendDay__c</fullName>
    <label>Time On Send Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>12:00 AM</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>12:30 AM</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>1:00 AM</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>1:30 AM</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>2:00 AM</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>2:30 AM</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>3:00 AM</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>3:30 AM</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>4:00 AM</label>
            </value>
            <value>
                <fullName>270</fullName>
                <label>4:30 AM</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>5:00 AM</label>
            </value>
            <value>
                <fullName>330</fullName>
                <label>5:30 AM</label>
            </value>
            <value>
                <fullName>360</fullName>
                <label>6:00 AM</label>
            </value>
            <value>
                <fullName>390</fullName>
                <label>6:30 AM</label>
            </value>
            <value>
                <fullName>420</fullName>
                <label>7:00 AM</label>
            </value>
            <value>
                <fullName>450</fullName>
                <label>7:30 AM</label>
            </value>
            <value>
                <fullName>480</fullName>
                <label>8:00 AM</label>
            </value>
            <value>
                <fullName>510</fullName>
                <label>8:30 AM</label>
            </value>
            <value>
                <fullName>540</fullName>
                <default>true</default>
                <label>9:00 AM</label>
            </value>
            <value>
                <fullName>570</fullName>
                <label>9:30 AM</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>10:00 AM</label>
            </value>
            <value>
                <fullName>630</fullName>
                <label>10:30 AM</label>
            </value>
            <value>
                <fullName>660</fullName>
                <label>11:00 AM</label>
            </value>
            <value>
                <fullName>690</fullName>
                <label>11:30 AM</label>
            </value>
            <value>
                <fullName>720</fullName>
                <label>12:00 PM</label>
            </value>
            <value>
                <fullName>750</fullName>
                <label>12:30 PM</label>
            </value>
            <value>
                <fullName>780</fullName>
                <label>1:00 PM</label>
            </value>
            <value>
                <fullName>810</fullName>
                <label>1:30 PM</label>
            </value>
            <value>
                <fullName>840</fullName>
                <label>2:00 PM</label>
            </value>
            <value>
                <fullName>870</fullName>
                <label>2:30 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>