force-app/main/default/objects/RecurringEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Frequency__c</columns>
    <columns>StartDateFieldName__c</columns>
    <columns>LastSendDate__c</columns>
    <columns>NextSendDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>